--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Modal body text goes here.</p>
+            <div id="token_list"></div>
           </div>
         </div>
       </div>
