--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
       </div>
     </div>
       <script src="./index.js" type="text/javascript"></script>
+      <script  src="./bundle.js"  type="text/javascript"></script>
     </body>
 </html>
